--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "@types/node": "^17.0.31",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
-    "@vitejs/plugin-vue": "^3.0.0",
+    "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-typescript": "^10.0.0",
     "bootstrap": "^5.1.3",
+    "lesshat": "^4.1.0",
     "sass": "^1.53.0",
     "vite": "^3.0.0",
     "vue-router": "^4.1.2",
