--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "esModuleInterop": true,
     "lib": ["esnext", "dom"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/wasm.js", "src/main.js"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "src/wasm.js", "src/main.js", "*.d.ts"],
   "exclude": ["node_modules/*", "dist/*"]
 }
