--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -14,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@octokit/core": "^4.0.4",
+    "@vue/composition-api": "^1.7.0",
     "@vueuse/head": "^0.7.6",
     "markdown-it": "^13.0.1",
     "markdown-it-emoji": "^2.0.2",
@@ -31,9 +31,11 @@
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/eslint-config-typescript": "^10.0.0",
     "bootstrap": "^5.1.3",
+    "cross-env": "^7.0.3",
     "lesshat": "^4.1.0",
     "sass": "^1.53.0",
     "vite": "^3.0.0",
+    "vite-plugin-ssr": "^0.4.13",
     "vue-router": "^4.1.2",
     "vue-tsc": "^0.3.0"
   }
