--- a/package.json
+++ b/package.json
@@ -1,42 +1,46 @@
 {
-  "name": "my-vue-app",
+  "name": "sso-team",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build"
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
+    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
+    "lint:prettier": "prettier --check .",
+    "lint": "yarn lint:js && yarn lint:prettier",
+    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@nuxtjs/axios": "^5.13.6",
     "@octokit/core": "^4.0.4",
-    "@vue/composition-api": "^1.7.0",
-    "@vueuse/head": "^0.7.6",
-    "markdown-it": "^13.0.1",
-    "markdown-it-emoji": "^2.0.2",
-    "markdown-it-mermaid": "^0.2.5",
-    "markdown-it-mermaid-plugin": "^0.1.0",
-    "vue": "^3.2.37"
+    "bootstrap": "^4.6.1",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.19.3",
+    "nuxt": "^2.15.8",
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@popperjs/core": "^2.11.5",
-    "@types/markdown-it": "^12.2.3",
-    "@types/markdown-it-emoji": "^2.0.2",
-    "@types/node": "^17.0.31",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vue/eslint-config-typescript": "^10.0.0",
-    "bootstrap": "^5.1.3",
-    "cross-env": "^7.0.3",
-    "lesshat": "^4.1.0",
-    "sass": "^1.53.0",
-    "vite": "^3.0.0",
-    "vite-plugin-ssr": "^0.4.13",
-    "vue-router": "^4.1.2",
-    "vue-tsc": "^0.3.0"
+    "@babel/eslint-parser": "^7.16.3",
+    "@nuxt/types": "^2.15.8",
+    "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/eslint-config-typescript": "^8.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "prettier": "^2.5.1",
+    "sass": "^1.54.3",
+    "sass-loader": "10",
+    "scss": "^0.2.4"
   }
 }
