--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@octokit/core": "^4.0.4",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
+    "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
