--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -19,7 +19,7 @@ jobs:
       IMAGE_NAME: sso-team
       KUBE_CONTAINER: deploy/touno-sso
       KUBE_NAMESPACE: web-api
-      PLATFORMS: linux/amd64,linux/arm64
+      PLATFORMS: linux/arm64
     steps:
       - uses: actions/checkout@v2
 
