--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -20,7 +20,7 @@ jobs:
       IMAGE_NAME: sso-team
       KUBE_CONTAINER: deploy/touno-sso
       KUBE_NAMESPACE: web-api
-      PLATFORMS: linux/amd64,linux/386,linux/arm64
+      PLATFORMS: linux/amd64,linux/386,linux/arm64/v8
     steps:
       - uses: actions/checkout@v2
 
