[Fix] GoogleFont to nuxtj config

--- a/.github/workflows/buildx.yml
+++ b/.github/workflows/buildx.yml
@@ -18,7 +18,7 @@ jobs:
     env:
       IMAGE_FILE: Dockerfile
       IMAGE_NAME: sso-team
-      KUBE_CONTAINER: deploy/touno-sso
+      KUBE_CONTAINER: deploy/sso-team
       KUBE_NAMESPACE: web-api
       PLATFORMS: linux/amd64,linux/arm64/v8
 
@@ -103,7 +103,7 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
         with:
-          args: set image ${{ steps.prepare.outputs.kube_container }} sso-app=${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} -n ${{ steps.prepare.outputs.kube_namespace }}
+          args: set image ${{ steps.prepare.outputs.kube_container }} touno-app=${{ steps.prepare.outputs.docker_image }}:${{ steps.prepare.outputs.version }} -n ${{ steps.prepare.outputs.kube_namespace }}
 
       - name: Status deployment 🔍
         if: success() && github.event_name != 'pull_request' && !contains(github.ref, 'main')
