--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,12 +1,11 @@
-name: lint
+name: "ESLint"
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
+    # The branches below must be a subset of the branches above
+    branches: [ main ]
 
 jobs:
   lint:
