--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -1,11 +1,11 @@
-name: "ESLint"
+name: 'ESLint'
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   lint:
