--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
     "sass": "^1.54.4",
-    "sass-loader": "10",
-    "scss": "^0.2.4"
+    "sass-loader": "10"
   }
 }
