--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@nuxtjs/axios": "^5.13.6",
     "@octokit/core": "^4.0.5",
@@ -23,26 +23,25 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "cookie-universal-nuxt": "^2.2.2",
-    "core-js": "^3.25.0",
+    "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-notification": "^1.3.20",
-    "vue-server-renderer": "^2.7.9",
+    "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
-    "@nuxt/image": "^0.7.1",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/google-fonts": "^3.0.0-0",
-    "eslint": "^8.23.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0",
+    "eslint-plugin-nuxt": "4.0.0",
+    "eslint-plugin-vue": "9.4.0",
     "prettier": "^2.5.1",
     "sass": "^1.54.4",
     "sass-loader": "10",
