--- a/package.json
+++ b/package.json
@@ -18,17 +18,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@nuxtjs/axios": "^5.13.6",
-    "@octokit/core": "^4.0.5",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.5",
     "nuxt": "^2.15.8",
-    "vue": "^2.7.11",
+    "vue": "2.7.13",
     "vue-notification": "^1.3.20",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.11",
+    "vue-template-compiler": "^2.7.13",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
@@ -41,7 +40,7 @@
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "4.0.0",
-    "eslint-plugin-vue": "9.4.0",
+    "eslint-plugin-vue": "^9.6.0",
     "prettier": "^2.5.1",
     "sass": "^1.55.0",
     "sass-loader": "10",
