--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "cookie-universal-nuxt": "^2.2.2",
     "core-js": "^3.25.5",
     "nuxt": "^2.15.8",
-    "vue": "2.7.13",
+    "vue": "^2.7.10",
     "vue-notification": "^1.3.20",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.13",
+    "vue-template-compiler": "^2.7.10",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
@@ -40,7 +40,7 @@
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "4.0.0",
-    "eslint-plugin-vue": "^9.6.0",
+    "eslint-plugin-vue": "9.4.0",
     "prettier": "^2.5.1",
     "sass": "^1.55.0",
     "sass-loader": "10",
